task 5.2: completed; minor refactoring for existing tasks

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -20,7 +20,7 @@ appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] %c{1} %L: %msg%n
 ##  loggers' properties
 
 loggers=file
-logger.file.name=com.nixsolutions.autoschool.bugayov.task4
+logger.file.name=com.nixsolutions.autoschool.bugayov.task4_3
 logger.file.level=debug
 logger.file.appenderRefs=file
 logger.file.appenderRef.file.ref=LOGFILE
